--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
 
 <body>
 
-    <h1>Welcome To Muktadir's Website</h1>
-    
+    <section>
+        <div>
+            <h1>Welcome To <span class="owner">Muktadir's</span> Website</h1>
+            <h3 class="intro">Who is Muktadir...?</h3>
+            <p>
+                Hi.I am student at <span><b>Brac University,</b></span>in <b>CSE</b>depertment.I have interest in coding and i love to code.i am currently learning Programming Hero's Complete Web Developer course and Python also.I enjoy both of them very much.I am very passionate about my current learning period.Hope i can do better step by step.I wish to be a web developer in next six month.Wish me very good luck.Let's hope for the best.
+        
+            </p>
+
+
+
+
+
+        </div>
+
+
+
+    </section>
+
+
 
 
 
