--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
 
     <section>
         <div>
-            <h1>Welcome To <span class="owner">Muktadir's</span> Website</h1>
+            <h1 class="start">Welcome To <span class="owner">Muktadir's</span> Website</h1>
             <h3 class="intro">Who is Muktadir...?</h3>
-            <p>
-                Hi.I am student at <span><b>Brac University,</b></span>in <b>CSE</b>depertment.I have interest in coding and i love to code.i am currently learning Programming Hero's Complete Web Developer course and Python also.I enjoy both of them very much.I am very passionate about my current learning period.Hope i can do better step by step.I wish to be a web developer in next six month.Wish me very good luck.Let's hope for the best.
-        
-            </p>
+            <p class="details">Hi.I am student at <span><b>Brac University,</b></span>in <b>CSE</b>depertment.I have
+                interest in coding and i love to code.i am currently learning Programming Hero's Complete Web Developer
+                course and Python also.I enjoy both of them very much.I am very passionate about my current learning
+                period.Hope i can do better step by step.I wish to be a web developer in next six month.Wish me very
+                good luck.Let's hope for the best.</p>
 
 
 
