--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <section>
         <div class="half-width">
             <h1 class="start">Welcome To <br> <span class="owner">Muktadir's</span> Website !</h1>
-            <h3 class="intro"><u class="underline">Who is Muktadir</u>...?</h3>
+            <h3> <u>Who is Muktadir</u>...?</h3>
             <p class="details">Hi.I am student at <span>Brac University, </span>in <b>CSE</b> depertment.I have
-                interest in coding and i love to code.I am currently learning Programming Hero's Complete Web Development
-                course and Python also.I enjoy both of them very much.I am very passionate about my current learning
+                interest in coding and i love to code.I am currently learning <span class="second">Programming Hero's</span> <span class="third">Complete Web Development</span>
+                course and <span class="forth">Python</span> also.I enjoy both of them very much.I am very passionate about my current learning
                 period.Hope i can do better step by step.I wish to be a web developer in next six month.Wish me very
                 good luck.Let's hope for the best.</p>
                 
@@ -33,8 +33,7 @@
 
 
         <div class="half-width">
-            <img src="/image/muktadir.png" alt="Picture of Muktadir">
-
+            <img src="/image/muktadir.png" alt="pic of Muktadir">
         </div>
 
 
