top section completed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Muktadir Loading...</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,12 +23,14 @@
         <div class="half-width">
             <h1 class="start">Welcome To <br> <span class="owner">Muktadir's</span> Website !</h1>
             <h3> <u>Who is Muktadir</u>...?</h3>
-            <p class="details">Hi.I am student at <span>Brac University, </span>in <b>CSE</b> depertment.I have
+            <p class="details">Hi.I am student at <span class="uni">Brac University, </span>in <b>CSE</b> depertment.I have
                 interest in coding and i love to code.I am currently learning <span class="second">Programming Hero's</span> <span class="third">Complete Web Development</span>
                 course and <span class="forth">Python</span> also.I enjoy both of them very much.I am very passionate about my current learning
                 period.Hope i can do better step by step.I wish to be a web developer in next six month.Wish me very
-                good luck.Let's hope for the best.</p>
-                
+                good luck.Let's hope for the best.</p><br>
+
+            
+                <a class="button" target="_blank" href="https://www.t.me/Muk74dir">Contact Me</a>    
         </div>
 
 
