picture problem solved

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
         <div class="half-width">
-            <img src="/image/muktadir.png" alt="pic of Muktadir">
+            <img src="./image/muktadir.png" alt="pic of Muktadir">
         </div>
 
 
