pic solved again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <section>
+    <section class="top">
         <div class="half-width">
             <h1 class="start">Welcome To <br> <span class="owner">Muktadir's</span> Website !</h1>
             <h3> <u>Who is Muktadir</u>...?</h3>
@@ -31,11 +31,12 @@
 
             
                 <a class="button" target="_blank" href="https://www.t.me/Muk74dir">Contact Me</a>    
+                
         </div>
 
 
         <div class="half-width">
-            <img src="./image/muktadir.png" alt="pic of Muktadir">
+            <img src="image/muktadir.png" alt="pic of Muktadir">
         </div>
 
 
