second section completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/sellix-removebg-preview.png" type="image/x-icon">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <section class="top">
         <div class="half-width">
             <h1 class="start">Welcome To <br> <span class="owner">Muktadir's</span> Website !</h1>
-            <h3> <u>Who is Muktadir</u>...?</h3>
+            <h3 class="inro"> <u>Who is Muktadir</u>...?</h3>
             <p class="details">Hi.I am student at <span class="uni">Brac University, </span>in <b>CSE</b> depertment.I have
                 interest in coding and i love to code.I am currently learning <span class="second">Programming Hero's</span> <span class="third">Complete Web Development</span>
                 course and <span class="forth">Python</span> also.I enjoy both of them very much.I am very passionate about my current learning
@@ -42,8 +42,19 @@
 
     </section>
 
+   <section class="middle">
+       <div class="half-width">
+           <img src="image/middle.png" alt="second pic of Muktadir">
 
+       </div>
+       <div class="half-width">
+            <h1 class="start">Why I am here?</h1>
+            <h3 class="inro"><u>Developing a portfolio website :</u></h3>
+            <p class="details details2">Here i am working on this site for making my portfolio website.Today it can looks like a normal and cheap wabsite,but sooner it will be looking as a professional website.For this stay tuned with me</p><br>
+            <a class="button" target="_blank" href="">Download Resume</a>
 
+       </div>
+   </section>
 
 
 
