--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h3 class="python univer">University Semester Period</h3>
             <p class="python">I am learning Python as a programming language in Brac University.Python is a very easy
                 and strong programming language.Python used in many sector like : Data Science,Data Analycis,Artifitial
-                Inteligence(AI) etc.Python language easy to read comparatively from others language.</p>
+                intelligence(AI) etc.Python language easy to read comparatively from others language.</p>
 
         </div>
         <div id="slice_middle" class="sector">
