--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <h1 class="python">Learning Python</h1>
             <h3 class="python univer">University Semester Period</h3>
             <p class="python">I am learning Python as a programming language in Brac University.Python is a very easy
-                and strong programming language.Python used in many sector like : Data Science,Data Analycis,Artifitial
-                intelligence(AI) etc.Python language easy to read comparatively from others language.</p>
+                and strong programming language.Python is used in many sector like : Data Science,Data Analysis,Artifitial
+                intelligence(AI) etc.Python language is easy to read comparatively from others language.</p>
 
         </div>
         <div id="slice_middle" class="sector">
