--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="start">Why <span class="owner">I'm</span> here?</h1>
             <h3 class="inro"><u>Developing a portfolio website :</u></h3>
             <p class="details details2">Here,i am working on this site for making my portfolio website.Today it can
-                looks like a normal and cheap wabsite,but sooner it will be looking as a professional website.For this
+                looks like a normal and cheap wEbsite,but sooner it will be looking as a professional website.For this
                 stay tuned with me</p><br>
             <a class="button" target="_blank" href="">Download Resume</a>
 
