--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h1 class="start">Why <span class="owner">I'm</span> here?</h1>
             <h3 class="inro"><u>Developing a portfolio website :</u></h3>
             <p class="details details2">Here,i am working on this site for making my portfolio website.Today it can
-                looks like a normal and cheap wEbsite,but sooner it will be looking as a professional website.For this
+                looks like a normal and cheap website,but sooner it will be looking as a professional website.For this
                 stay tuned with me</p><br>
             <a class="button" target="_blank" href="">Download Resume</a>
 
@@ -71,7 +71,8 @@
             <h1 class="python">Learning Python</h1>
             <h3 class="python univer">University Semester Period</h3>
             <p class="python">I am learning Python as a programming language in Brac University.Python is a very easy
-                and strong programming language.Python is used in many sector like : Data Science,Data Analysis,Artifitial
+                and strong programming language.Python is used in many sector like : Data Science,Data
+                Analysis,Artifitial
                 intelligence(AI) etc.Python language is easy to read comparatively from others language.</p>
 
         </div>
