--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="half-width">
             <h1 class="start">Why <span class="owner">I'm</span> here?</h1>
             <h3 class="inro"><u>Developing a portfolio website :</u></h3>
-            <p class="details details2">Here,i am working on this site for making my portfolio website.Today it can
-                looks like a normal and cheap website,but sooner it will be looking as a professional website.For this
+            <p class="details details2">Here,i am working on this site for making my portfolio website.Today it can be
+                look like a normal and cheap website,but sooner it will be looking as a professional website.For this
                 stay tuned with me</p><br>
             <a class="button" target="_blank" href="">Download Resume</a>
 
@@ -72,7 +72,7 @@
             <h3 class="python univer">University Semester Period</h3>
             <p class="python">I am learning Python as a programming language in Brac University.Python is a very easy
                 and strong programming language.Python is used in many sector like : Data Science,Data
-                Analysis,Artifitial
+                Analysis,Artificial
                 intelligence(AI) etc.Python language is easy to read comparatively from others language.</p>
 
         </div>
